[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Characters/Jumper/jumper-idle/jumper-idle-1.png" type="Texture" id=1]
[ext_resource path="res://Resources/Characters/Jumper/jumper-idle/jumper-idle-4.png" type="Texture" id=2]
[ext_resource path="res://Resources/Characters/Jumper/jumper-idle/jumper-idle-2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Characters/Jumper/jumper-idle/jumper-idle-3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Characters/Jumper/jumper-jump/jumper-jump.png" type="Texture" id=5]
[ext_resource path="res://Character/JumperEnnemy.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="JumperEnnemy" type="Area2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="GroundCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 10 )

[node name="CeilingCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -10 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_JumperEnnemy_body_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
